fix(ui5-product-switch-item): No-wrap title behavior added when no subtitle

--- a/packages/fiori/src/themes/ProductSwitchItem.css
+++ b/packages/fiori/src/themes/ProductSwitchItem.css
@@ -76,11 +76,17 @@
 	text-overflow: ellipsis;
 	max-width: 100%;
 	pointer-events: none;
+	text-align: center;
 }
 
 .ui5-product-switch-item-root .ui5-product-switch-item-text-content .ui5-product-switch-item-title {
 	font-size:var( --sapFontHeader6Size);
 	color:var(--sapGroup_TitleTextColor);
+}
+
+.ui5-product-switch-item-root .ui5-product-switch-item-text-content .ui5-product-switch-item-title:only-child {
+	white-space: normal;
+	overflow: visible;
 }
 
 .ui5-product-switch-item-root .ui5-product-switch-item-text-content .ui5-product-switch-item-subtitle {
